examples/type_system/failing/108_fun_return_string_vs_int.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn bad() -> Int {
    "oops"
}

fn main() -> Unit {
    bad()
}
